Fixed problem w/ z-index of footer links list

--- a/src/assets/partials/_variables.scss
+++ b/src/assets/partials/_variables.scss
@@ -7,10 +7,32 @@ $orange : #ff7300;
     outline:1px solid red;
 }
 
+// ###Available breakpoints###
 $viewport-sm: 576px;
+$viewport-md: 768px;
+$viewport-lg: 992px;
+$viewport-xl: 1200px;
+$viewport-xxl: 1400px;
+
+
+//cambio stile bottoni header
 @mixin switch {
     @media (max-width: $viewport-sm) {
       border-radius: 70px 0 0 70px;
       right: -30px;
     }
   }
+
+//cambio posizione logo footer
+
+@media (max-width: $viewport-sm) {
+    ._mylist{
+        flex-direction: column;
+    }
+
+    ._mypos{
+        position: absolute;
+        bottom: 0px;
+        opacity: 50%;
+    }
+}
